# invoice-processing

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Makefile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: approve.py  homoglyph_check.py  ingest.py  log_node.py  pay.py  validate.py
backend/app/api/: app.py  decisions.py  routes.py  runs.py  sse.py
backend/app/db/: init_db.py  paid_invoices.py  seed.yaml
backend/app/graph/: builder.py  state.py
backend/app/llm/: grok_client.py  structured_output.py  tools_loop.py
backend/app/logging_/: event_emitter.py
backend/app/parsers/: file_loader.py
backend/app/rules/: engine.py  rules.yaml
backend/app/tools/: inventory_tool.py  llm_tools.py  payment_tool.py  replay.py  vendor_tool.py
backend/data/adversarial/: invoice_9001.txt  invoice_9004.xml
backend/data/batch_results/: README.md  (+1 more)
backend/scripts/: record_fixtures.py
backend/tests/: conftest.py  expected_outcomes.yaml  fixture_helpers.py  test_api.py  test_approve_agent.py  test_cli.py  test_cross_batch_dedup.py  test_db_init.py  test_event_emitter.py  test_file_loader.py  test_graph_builder.py  test_grok_client.py  test_homoglyph_check.py  test_ingest_agent.py  test_integration.py  test_live_smoke.py  test_llm_tools.py  test_log_node.py  test_metrics_endpoint.py  test_paid_invoices.py  test_pay.py  test_replay.py  test_retry_endpoint.py  test_rules_engine.py  test_runs_registry.py  test_sample_endpoint.py  test_state_models.py  test_tools.py  test_tools_loop.py  test_validate_agent.py  test_vendor_normalization.py
(+71 files in other folders)
