[project]
name = "invoice-processing-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "pdfplumber>=0.11.0",
  "pymupdf>=1.24.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
strict = true
files = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
